# waktu-solat-mcp

./: .dockerignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml
scripts/: test_mcp_inspect.py
src/waktusolat_mcp/: __init__.py  api.py  server.py
