[project]
name = "waktu-solat-mcp"
version = "0.1.0"
description = "MCP server exposing Malaysian prayer times via Waktu Solat API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.24.0",
]

[project.scripts]
waktusolat-mcp = "waktusolat_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waktusolat_mcp"]
